test/fixtures/parse_errors/noSetters.ion
obj = { set foo () { 1 } }